--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -409,6 +409,9 @@ layers:
                 draw:
                     lines:
                         color: [0.465,0.385,0.820]
+                        outline:
+                            color: [[14,[0.400,0.561,0.718]],[16,[0.078,0.464,0.582]]]
+                            width: [[14,0px],[15,0.35px],[16,1px],[17,2px],[19,4px]]
 
         airport-lines:
             filter: { kind: minor_road, aeroway: [runway,taxiway] }
