--- a/layers/telecom.yaml
+++ b/layers/telecom.yaml
@@ -8,8 +8,8 @@ layers:
         data: { source: cables }
         draw:
             cables:
-                width: 12px
-                color: [1.000, 0.467, 0.000, 1.00]
+                width: [[4,0px],[5,10px],[8,0px]]
+                color: [0.071,0.365,0.980,1.0]
                 order: 40000
 
 styles:
