--- a/layers/telecom.yaml
+++ b/layers/telecom.yaml
@@ -9,7 +9,8 @@ layers:
         draw:
             cables:
                 width: [[4,0px],[5,10px],[8,0px]]
-                color: [0.071,0.365,0.980,1.0]
+                color: [1.000, 0.467, 0.000, 1.00]
+                # color: [0.071,0.365,0.980,1.0]
                 order: 40000
 
 styles:
