--- a/layers/roads-labels.yaml
+++ b/layers/roads-labels.yaml
@@ -5,80 +5,80 @@ layers:
         highway:
             filter: { kind: highway }
             labels-highway-z8:
-                filter: { $zoom: { min: 8 }, $zoom: { max: 14 } }
+                filter: { $zoom: { min: 8 }, $zoom: { max: 15 } }
                 draw:
                     text:
                         priority: 50
                         text_source: ref
                         font:
-                            family: Exo2
-                            size: [[8,9px],[12,12px]]
-                            fill: white
-                            stroke: { color: blue, width: 4px }
+                            family: Aldrich
+                            size: [[8,8px],[12,10px]]
+                            fill: [0.082,0.133,0.259]
+                            stroke: { color: [1.000,0.000,0.741], width: 5px }
             labels-highway-z14:
-                filter: { $zoom: { min: 14 } }
+                filter: { $zoom: { min: 15 } }
                 draw:
                     text:
                         priority: 50
                         text_source: function() { if( feature.ref && feature.name ) { return feature.ref + " " + feature.name; } else { return feature.name; } }
                         font:
-                            family: Exo2
-                            size: [[14,13px],[19,16px]]
-                            fill: white
-                            stroke: { color: blue, width: 4px }
+                            family: Aldrich
+                            size: [[15,12px],[20,14px]]
+                            fill: [0.082,0.133,0.259]
+                            stroke: { color: [1.000,0.000,0.741], width: 8px }
 
 
 
-        major_road:
-            filter: { kind: major_road }
-            trunk_primary:
-                filter: { highway: [trunk, primary] }
-                routes:
-                    filter: { ref: true }
-                    labels-trunk-primary-route:
-                        filter: { $zoom: { min: 13 } }
-                        draw:
-                            text:
-                                priority: 50
-                                text_source: function() { if( feature.ref && feature.name ) { return feature.ref + " " + feature.name; } else { return feature.name; } }
-                                font:
-                                    family: Exo2
-                                    size: [[13,12px],[19,16px]]
-                                    fill: white
-                                    stroke: { color: blue, width: 3px }
-                labels-trunk-primary-z14:
-                    filter: { $zoom: [13,14] }
-                    draw:
-                        text:
-                            priority: 53
-                            text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
-                            font:
-                                family: Cairo
-                                size: 9px
-                                fill: white
-                                stroke: { color: [0.212,0.302,0.427], width: 4px }
-                labels-trunk-primary-z16:
-                    filter: { $zoom: { min: 15 } }
-                    draw:
-                        text:
-                            priority: 53
-                            text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
-                            font:
-                                family: Cairo
-                                size: [[15,12px],[18,14px]]
-                                fill: white
-                                stroke: { color: [0.082,0.133,0.259], width: 4px }
+        # major_road:
+        #     filter: { kind: major_road }
+        #     trunk_primary:
+        #         filter: { highway: [trunk, primary] }
+        #         routes:
+        #             filter: { ref: true }
+        #             labels-trunk-primary-route:
+        #                 filter: { $zoom: { min: 13 } }
+        #                 draw:
+        #                     text:
+        #                         priority: 50
+        #                         text_source: function() { if( feature.ref && feature.name ) { return feature.ref + " " + feature.name; } else { return feature.name; } }
+        #                         font:
+        #                             family: Aldrich
+        #                             size: [[13,12px],[19,14px]]
+        #                             fill: [0.082,0.133,0.259]
+        #                             stroke: { color: [0.003,0.510,0.667], width: 3px }
+            #     labels-trunk-primary-z14:
+            #         filter: { $zoom: [13,14] }
+            #         draw:
+            #             text:
+            #                 priority: 53
+            #                 text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
+            #                 font:
+            #                     family: Cairo
+            #                     size: 9px
+            #                     fill: [0.515,0.859,0.920]
+            #                     stroke: { color: [0.212,0.302,0.427], width: 4px }
+            #     labels-trunk-primary-z16:
+            #         filter: { $zoom: { min: 15 } }
+            #         draw:
+            #             text:
+            #                 priority: 53
+            #                 text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
+            #                 font:
+            #                     family: Cairo
+            #                     size: [[15,12px],[18,14px]]
+            #                     fill: [0.389,0.747,0.810]
+            #                     stroke: { color: [0.082,0.133,0.259], width: 4px }
 
-            secondary:
-                filter: { highway: secondary }
-                labels-secondary:
-                    filter: { $zoom: { min: 15 } }
-                    draw:
-                        text:
-                            priority: 54
-                            text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
-                            font:
-                                family: Cairo-Light
-                                size: 12px
-                                fill: white
-                                stroke: { color: [0.082,0.133,0.259], width: 4px }
+            # secondary:
+            #     filter: { highway: secondary }
+            #     labels-secondary:
+            #         filter: { $zoom: { min: 15 } }
+            #         draw:
+            #             text:
+            #                 priority: 54
+            #                 text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
+            #                 font:
+            #                     family: Cairo
+            #                     size: 12px
+            #                     fill: [0.389,0.747,0.810]
+            #                     stroke: { color: [0.082,0.133,0.259], width: 4px }
