--- a/layers/earth.yaml
+++ b/layers/earth.yaml
@@ -21,12 +21,14 @@ layers:
         data: { source: mapzen, layer: landuse }
         filter:
             kind: ['urban area']
-            $zoom: { max: 6 }
+            $zoom: { max: 8 }
         draw:
             polygons:
                 style: urban-early
                 order: global.order
-                color: [[4,[0.031,0.973,1.000]],[6,[0.139,0.198,0.283]]]
+                # color: [[4,[0.031,0.973,1.000]],[6,[0.139,0.198,0.283]]]
+                # color: [0.031,0.973,1.000]
+                color: [0.267,0.365,0.502]
 
 styles:
     earth-early:
@@ -49,12 +51,17 @@ styles:
         mix: [functions-zoom, polygons-diagonal-stripes]
         shaders:
             defines:
-                ZOOM_START: 3.
-                ZOOM_END: 7
-                ZOOM_MAX: 7.
-                ZOOM_IN: 0.9
-                ZOOM_OUT: -.2
+                ZOOM_START: 4.
+                ZOOM_END: 7.5
 
-                STRIPES_ALPHA: 1.0
-                STRIPES_SCALE: 50.
-                STRIPES_WIDTH: zoom()
+                STRIPES_ALPHA: 1.
+                STRIPES_SCALE: 25.
+                STRIPES_WIDTH: .5-(zoom())
+
+                COLOR_A: color.rgb
+                COLOR_B: vec3(0.031,0.973,1.000)
+            blocks:
+                color: |
+                    color.rgb = mix(COLOR_A, COLOR_B, sin(zoom()*3.1415));
+
+
