--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -207,10 +207,10 @@ layers:
                 draw:
                     lines:
                         style: traffic-animation
-                        color: [[8,[0.418,0.754,0.736]],[12,[0.418,0.754,0.736]],[13,[0.086,0.135,0.260]]]
+                        color: [[8,[0.418,0.754,0.736]],[12,[0.278,0.651,0.749]],[13,[0.086,0.135,0.260]]]
                         width: [[8,0.25px],[9,0.3px],[11,0.3px],[12,0.75px],[13,0.1px],[14,2px],[15,5px],[16,6px],[17,12px],[18,22px],[19,38px],[20,65px]]
                         outline:
-                            color: [[8,[0.418,0.754,0.736]],[14,[0.416,1.000,1.000]],[18,[0.039,0.980,1.000]]]
+                            color: [[13,[0.196,0.494,0.647]],[14,[0.000,0.466,0.650]]]
                             width: [[8,0px],[12,0px],[13,0.6px],[14,0.75px],[15,1px],[17,2px],[18,2px],[19,2px]]
                 trunk-primary-z17:
                     filter:
@@ -226,11 +226,11 @@ layers:
                     draw:
                         lines:
                             style: traffic-animation
-                            color: [[8,[1.00,1.00,1.00]],[11,[1.00,1.00,1.00]],[12,[0.086,0.135,0.260]],[13,[0.086,0.135,0.260]]]
+                            color: [[8,[0.337,0.788,0.878]],[11,[0.301,0.704,0.785]],[12,[0.086,0.135,0.260]],[13,[0.086,0.135,0.260]]]
                             width: [[8,0.15px],[11,0.4px],[12,0.1px],[13,0.1px],[14,2px],[15,5px],[16,7px],[17,12px],[18,22px],[19,38px],[20,65px]]
                             outline:
                                 # color: [[8,[0.329,0.588,0.784]],[11,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
-                                color: [1.00,1.00,1.00]
+                                color: [0.301,0.704,0.785]
                                 width: [[8,0px],[11,0px],[12,0.30px],[13,0.5px],[15,1.5px]]
                     primary-routes-z17:
                         filter:
@@ -269,10 +269,10 @@ layers:
                 draw:
                     lines:
                         style: traffic-animation
-                        color: [[8,[0.418,0.754,0.736]],[12,[0.418,0.754,0.736]],[13,[0.086,0.135,0.260]]]
+                        color: [[8,[0.418,0.754,0.736]],[12,[0.278,0.651,0.725]],[13,[0.086,0.135,0.260]]]
                         width: [[8,0.25px],[9,0.3px],[11,0.5px],[12,0.75px],[13,0.1px],[14,1.5px],[15,5px],[16,6px],[17,9px],[18,14px],[19,32px],[20,60px]]
                         outline:
-                            color: [[8,[0.329,0.588,0.784]],[11,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
+                            color: [[13,[0.196,0.494,0.647]],[14,[0.000,0.466,0.650]]]
                             width: [[8,0px],[12,0px],[13,0.5px],[14,0.75px],[15,1px],[17,2px],[18,2px]]
                 secondary-z17:
                     filter:
@@ -287,10 +287,10 @@ layers:
                     filter: { ref: true, $zoom: { min: 12 } }
                     draw:
                         lines:
-                            color: [[12,[0.418,0.754,0.736]],[13,[0.086,0.135,0.260]]]
+                            color: [[12,[0.278,0.651,0.725]],[13,[0.086,0.135,0.260]]]
                             width: [[12,0.75px],[13,0.1px],[14,1.5px],[15,5px],[16,6px],[17,9px],[18,14px],[19,30px],[20,60px]]
                             outline:
-                                color: [[12,[0.418,0.754,0.736]],[14,[0.510,0.920,0.897]]]
+                                color: [[13,[0.196,0.494,0.647]],[14,[0.000,0.466,0.650]]]
                                 width: [[12,0px],[13,0.5px],[14,0.75px],[15,1px],[17,1.25px],[18,1.5px]]
                     tunnel:
                         filter: { is_tunnel: yes, $zoom: { min: 13 } }
@@ -309,7 +309,7 @@ layers:
                         width: [[12,0.5px],[13,0.5px],[14,0.1px],[15,2px],[16,4px],[17,8px],[18,14px],[19,30px],[20,60px]]
                         outline:
                             # color: [[15,[0.248,0.397,0.439]],[16,[0.285,0.457,0.506]]]
-                            color: [[12,[0.245,0.351,0.500]],[15,[0.482,0.671,0.831]],[17,[0.275,0.392,0.560]]]
+                            color: [[12,[0.082,0.133,0.259]],[14,[0.082,0.133,0.259]],[15,[0.212,0.302,0.427]],[17,[0.212,0.302,0.427]]]
                             width: [[12,0px],[14,0.4px],[15,1px],[17,2px],[18,2px]]
                 routes:
                     filter: { ref: true, $zoom: { min: 12 } }
@@ -342,12 +342,12 @@ layers:
             filter: { kind: minor_road, not: { highway: service, aeroway: [runway, taxiway] } }
             draw:
                 lines:
-                    color: [[12,[0.248,0.397,0.439]],[13,[0.248,0.397,0.439]],[14,[0.082,0.133,0.259]]]
+                    color: [[12,[0.196,0.267,0.373]],[13,[0.173,0.224,0.318]],[14,[0.082,0.133,0.259]]]
                     width: [[12,0.5px],[13,0.5px],[14,0.15px],[15,2px],[16,4px],[17,8px],[18,14px],[19,30px],[20,60px]]
                     outline:
                         # color: [[12,[0.248,0.397,0.439]],[15,[0.248,0.397,0.439]],[16,[0.285,0.457,0.506]]]
-                        color: [[12,[0.245,0.351,0.500]],[15,[0.482,0.671,0.831]],[17,[0.275,0.392,0.560]]]
-                        width: [[12,0px],[14,0.4px],[15,0.5px],[17,2px],[18,2px]]
+                        color: [[12,[0.082,0.133,0.259]],[14,[0.082,0.133,0.259]],[15,[0.212,0.302,0.427]],[17,[0.212,0.302,0.427]]]
+                        width: [[12,0px],[13,0px],[14,0.4px],[15,0.5px],[17,2px],[18,2px]]
             tunnel:
                 filter: { is_tunnel: yes, $zoom: { min: 13 } }
                 draw:
@@ -368,7 +368,7 @@ layers:
                     color: [[12,[0.248,0.397,0.439]],[13,[0.248,0.397,0.439]],[14,[0.082,0.133,0.259]]]
                     width: [[12,0.5px],[13,0.5px],[14,0.15px],[15,1.25px],[16,2px],[18,5px],[19,10px],[20,25px]]
                     outline:
-                        color: [[12,[0.245,0.351,0.500]],[15,[0.482,0.671,0.831]],[17,[0.275,0.392,0.560]]]
+                        color: [[12,[0.082,0.133,0.259]],[14,[0.082,0.133,0.259]],[15,[0.212,0.302,0.427]],[17,[0.212,0.302,0.427]]]
                         width: [[12,0px],[14,0.4px],[15,0.5px],[17,1.25px],[18,1.5px]]
             in-hospital:
                 filter: { landuse_kind: hospital }
