--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -411,6 +411,16 @@ layers:
                             color: [[14,[0.400,0.561,0.718]],[16,[0.078,0.464,0.582]]]
                             width: [[14,0px],[15,0.35px],[16,1px],[17,2px],[19,4px]]
 
+        track:
+            filter: { kind: path, highway: track }
+            draw:
+                lines:
+                    color: [[14,[0.400,0.561,0.718]],[15,[0.428,0.696,0.930]]]
+                    width: [[13,0px],[14,0.35px],[15,0.1px],[16,1.5px],[18,2.5px],[19,4px],[20,5px]]
+                    outline:
+                        color: [[14,[0.400,0.561,0.718]],[16,[0.078,0.464,0.582]]]
+                        width: [[14,0px],[15,0.35px],[16,1px],[17,2px],[19,4px]]
+
         airport-lines:
             filter: { kind: minor_road, aeroway: [runway,taxiway] }
             draw:
