--- a/layers/roads-labels.yaml
+++ b/layers/roads-labels.yaml
@@ -1,6 +1,12 @@
+import:
+    - globals.yaml
+
 layers:
     roads:
         data: { source: mapzen }
+        draw:
+            lines:
+                interactive: true
 
         highway:
             filter: { kind: highway }
@@ -20,7 +26,7 @@ layers:
                 draw:
                     text:
                         priority: 50
-                        text_source: function() { if( feature.ref && feature.name ) { return feature.ref + " " + feature.name; } else { return feature.name; } }
+                        text_source: global.ux_language_text_source
                         font:
                             family: Aldrich
                             size: [[15,12px],[20,14px]]
@@ -40,7 +46,7 @@ layers:
                         draw:
                             text:
                                 priority: 50
-                                text_source: function() { if( feature.ref && feature.name ) { return feature.ref + " " + feature.name; } else { return feature.name; } }
+                                text_source: global.ux_language_text_source
                                 font:
                                     family: Aldrich
                                     size: [[13,10px],[15,12px],[19,14px]]
@@ -51,7 +57,7 @@ layers:
                     draw:
                         text:
                             priority: 53
-                            text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
+                            text_source: global.ux_language_text_source
                             font:
                                 family: Cairo
                                 size: 10px
@@ -62,7 +68,7 @@ layers:
                     draw:
                         text:
                             priority: 53
-                            text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
+                            text_source: global.ux_language_text_source_road_ref_and_name_short
                             font:
                                 family: Cairo
                                 size: [[15,13px],[18,14px]]
@@ -75,7 +81,7 @@ layers:
                     draw:
                         text:
                             priority: 54
-                            text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
+                            text_source: global.ux_language_text_source_road_ref_and_name_short
                             font:
                                 family: Cairo
                                 size: [[15,13px],[18,14px]]
@@ -92,7 +98,7 @@ layers:
                             text:
                                 visible: true
                                 priority: 54
-                                text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
+                                text_source: global.ux_language_text_source_road_ref_and_name_short
                                 font:
                                     family: Cairo
                                     size: [[13,10px],[15,13px],[18,14px]]
@@ -105,7 +111,7 @@ layers:
                         text:
                             visible: true
                             priority: 55
-                            text_source: function() { if( feature.ref && feature.name ) { if( feature.ref.length < 6 ) { return feature.ref + " " + feature.name; } else { return feature.name; } } else { return feature.name; } }
+                            text_source: global.ux_language_text_source_road_ref_and_name_short
                             font:
                                 family: Cairo
                                 size: [[15,10px],[18,14px]]
