--- a/layers/water.yaml
+++ b/layers/water.yaml
@@ -5,7 +5,6 @@ layers:
             polygons:
                 style: water
                 order: global.order
-                # color: [0.219, 0.226, 0.529]
                 color: [0.304,0.310,0.660]
 
         later:
@@ -13,7 +12,8 @@ layers:
             draw:
                 polygons:
                     style: water-later
-                    color: [0.194,0.198,0.380]
+                    # color: [0.304,0.310,0.660]
+                    # color: [0.194,0.198,0.380]
                     # color: [0.219,0.226,0.430]
 
         lakes:
@@ -163,11 +163,12 @@ styles:
         animated: true
         shaders:
             defines:
-                ZOOM_START: 11.
+                ZOOM_START: 13.
                 ZOOM_END: 16.
 
                 SHIMMERING_SCALE: mix(10.,30.,zoom())
-                SHIMMERING_BACKGROUND_COLOR: vec3(0.145,0.157,0.247)
+                # SHIMMERING_COLOR: color.rgb
+                # SHIMMERING_BACKGROUND_COLOR: vec3(0.145,0.157,0.247)
                 SHIMMERING_SPEED: .5
                 SHIMMERING_AMOUNT: zoom()
                 SHIMMERING_ANIMATED: global.animated
